// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert arr 1`] = `
[
  {
    "A1": 1,
    "B1": {
      "B1": 1,
      "b2": {
        "B1": [
          {
            "B1": 1,
            "b2": {},
            "b3": "1",
          },
        ],
      },
      "b3": "1",
    },
    "c": null,
    "d": "",
  },
]
`;

exports[`convert obj 1`] = `
{
  "A1": 1,
  "B1": {
    "B1": 1,
    "b2": {
      "B1": [
        {
          "B1": 1,
          "F1": {},
          "b2": {},
          "b3": "1",
        },
      ],
    },
    "b3": "1",
  },
  "c": null,
  "d": "",
}
`;

exports[`convert obj2 1`] = `
{
  "A1": 1,
  "B1": {
    "B1": 1,
    "b2": {
      "B1": [
        {
          "B1": 1,
          "F1": {},
          "b2": {},
          "b3": "1",
        },
      ],
    },
    "b3": "1",
    "b4": {
      "b1": 1,
      "b2": {},
      "b3": "1",
    },
  },
  "c": null,
  "d": "",
}
`;
